fixed horizontal scroll images

--- a/app/assets/stylesheets/main.css
+++ b/app/assets/stylesheets/main.css
@@ -154,7 +154,6 @@ a {
 .item {
   width:auto;
   height:auto;
-  padding:2px;
 }
 
 .articleContainer {
